--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "node main.js",
-    "dev": "npx nodemon --watch *.ts --watch src/*.ts --exec 'tsc && node main.js' ",
+    "dev": "npx nodemon --watch main.ts --watch src/*.ts --exec \"node ./dev.js\" ",
     "build": "npx tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
