Connect frontend and backend

--- a/backend/package.json
+++ b/backend/package.json
@@ -21,11 +21,13 @@
   },
   "homepage": "https://github.com/jpledezma/club_de_futbol#readme",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "nodemon": "^3.1.9",
     "typescript": "^5.7.3"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.21.2"
   }
 }
