--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,1 +1,7 @@
 PORT = 3000
+DB_PORT = 3306
+DB_HOST = "localhost"
+DB_NAME = "database"
+DB_USER = "user"
+DB_PASSWORD = "password"
+DB_DIALECT = "mysql"
