--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,8 @@
   "main": "main.js",
   "type": "module",
   "scripts": {
-    "start": "node main.js",
-    "dev": "npx nodemon --watch main.ts --watch src/**/*.ts --ext \"ts json\" --exec \"tsc && node ./main.js\" ",
+    "start": "node ./dist/main.js",
+    "dev": "npx nodemon --watch main.ts --watch src/**/*.ts --ext \"ts json\" --exec \"tsc && node ./dist/main.js\" ",
     "build": "npx tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
